--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@google/genai": "^1.21.0",
     "react-dom": "^19.1.1",
     "pdfjs-dist": "^4.5.136",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "tesseract.js": "5.1.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
